<resources>
    <string name="app_name">User Search</string>
    <string name="tab_text_1">Followings</string>
    <string name="tab_text_2">Followers</string>
    <string name="searchbar_hint">Search username…</string>
    <string name="username">USERNAME HERE</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="user_profile">User Profile</string>
    <string name="total_gists">Total gists: %1$d</string>
    <string name="total_followers">Total followers: %1$d</string>
    <string name="total_followings">Total followings: %1$d</string>
    <string name="total_repositories">Total public repositories: %1$d</string>
    <string name="account_created_at">Account created at %1$s</string>
    <string name="full_name">full name: %1$s</string>
    <string name="enable_dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="favorite_list">Favorite List</string>
    <string name="profile_user">Profile User</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="list_follower_and_following">List Follower and Following</string>
    <string name="tv_favorite_user_label">No favorite users yet, please add some first</string>
</resources>